--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 jobs:
   build:
     environment:
-      IMAGE_NAME: swathithangaraj/sample2
+      IMAGE_NAME: swathithangaraj/building-on-ci
     docker:
       - image: 'docker:17.05.0-ce-git'
     steps:
@@ -31,13 +31,13 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - 2c:55:fe:9d:89:19:4d:eb:47:b8:8f:6a:b8:7a:8f:67      
+            - 2c:55:fe:9d:89:19:4d:eb:47:b8:8f:6a:b8:7a:8f:67
       - run:
           name: Deploy over ssh
           command: |
-            ssh -vvvv -oStrictHostKeyChecking=no $SSH_USER@$SSH_HOST "cd /home/swathi/cirk8 && kubectl create namespace.yaml && kubectl create -f deployment.yaml -n demo && kubectl get deploy -n demo && kubectl create -f service.yaml -n demo && kubectl get svc -n demo && kubectl rollback sample && kubectl get pods"
-              
-          
+            ssh -vvvv -oStrictHostKeyChecking=no $SSH_USER@$SSH_HOST "cd /home/swathi/swathi && kubectl create ns second && kubectl create -f deployment.yaml -n second && kubectl get deploy -n second && kubectl create -f service.yaml -n second && kubectl get svc -n second && kubectl get pods"
+
+
 
                   #kubectl get ns
                   #kubectl --server=https://10.128.0.36:6443 --username=kubernetes-admin --client-key=/root/.kube/config create -f root/swathi/deployment.yaml
@@ -54,4 +54,3 @@ workflows:
        - deploy:
            requires:
              - build
-
